<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbackground">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="100px"
        android:layout_height="100px"
        android:src="@drawable/ic_menu_camera"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textViewAddNewVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="Add New Vehicle"
            android:textColor="@color/app_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.342"
            app:layout_constraintStart_toEndOf="@id/buttonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
        android:id="@+id/editTextVehicleNumber"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:hint="Vehicle Number"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddNewVehicle" />

    <EditText
        android:id="@+id/editTextBrand"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="Brand"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextVehicleNumber"/>

    <EditText
        android:id="@+id/editTextModel"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="Model"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextBrand"/>

    <EditText
        android:id="@+id/editTextManufactureYear"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="Manufacture Year"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextModel"/>

    <EditText
        android:id="@+id/editTextODO"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="ODO Meter Reading"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextManufactureYear"/>

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="Color"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/editTextODO"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintTop_toBottomOf="@+id/editTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
