<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img"
        android:contentDescription="Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textViewRegisterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/app_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="Name"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRegisterLabel"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="Email"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="Phone Number"
        android:inputType="phone"
        android:padding="12dp"
        android:textColorHint="@color/embossed_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Login"
        android:textColor="@color/link_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
