<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/ic_menu_camera"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
...
